# django-tips

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
docs/: conf.py  index.rst  installation.rst  usage.rst
example/: README.md  db.sqlite3
example/example/: settings.py  tests.py  urls.py
example/fixtures/: initial_data.json
example/static/css/: tips.css
example/templates/tips/: base.html
tips/: admin.py  models.py  serializers.py  urls.py  views.py
tips/js_src/: tips.jsx
tips/migrations/: 0001_initial.py  0002_auto_20160610_1025.py  0003_auto_20160610_1537.py  0004_tipofday_groups.py  0005_auto_20170124_1441.py  0006_auto_20180122_2128.py
tips/static/tips/js/: tips.js  tips.min.js
tips/templates/tips/: tips.html
tips_frontend/: package-lock.json  package.json  tips.jsx  webpack.config.js
