[tool.poetry]
name = "django-tips"
version = "0.8.2"
description = "Show tip of the day cards on your site."
authors = ["Michal Hozza <mhozza@gmail.com>"]
license = "BSD-3-Clause"
packages = [
    { include = "tips" },
]
readme = "README.rst"
repository = "https://github.com/trojsten/django-tips"
classifiers = [
        'Development Status :: 3 - Alpha',
        'Framework :: Django',
        'Framework :: Django :: 2.0',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: BSD License',
        'Natural Language :: English',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.5',
        'Programming Language :: Python :: 3.6',
]

[tool.poetry.dependencies]
python = "^3.5"
django = "^2.0"
markdown = ">=2.6"
djangorestframework = ">=3.10"

[tool.poetry.dev-dependencies]
bumpversion = ">=0.5.3"
wheel = ">=0.33.6"
django-debug-toolbar = ">=2.0"
coverage = ">=4.5"
django-sekizai = ">=1.0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
